# agentic-memory

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
src/agentic_memory/: __init__.py  config.py  exceptions.py  types.py
src/agentic_memory/agent/: __init__.py  client.py  context_builder.py  tools.py
src/agentic_memory/embeddings/: __init__.py  base.py  fake.py  openai.py  sentence_transformers.py
src/agentic_memory/graph/: __init__.py  clustering.py  decay.py  engine.py  importance.py  traversal.py
src/agentic_memory/memory/: __init__.py  archival.py  core.py  manager.py  recall.py
src/agentic_memory/schemas/: __init__.py  consolidation.py  edge.py  memory_block.py  node.py  passage.py  search.py
src/agentic_memory/sleep/: __init__.py  consolidator.py  importance_scorer.py  scheduler.py  summarizer.py
src/agentic_memory/storage/: __init__.py  base.py  sqlite.py
src/agentic_memory/storage/models/: __init__.py  base.py  block.py  edge.py  node.py  passage.py
src/agentic_memory/utils/: __init__.py  hashing.py  logging.py  token_counting.py
tests/: conftest.py
tests/unit/: test_archival_memory.py  test_consolidator.py  test_core_memory.py  test_decay.py  test_graph_engine.py  test_importance.py  test_recall_memory.py
