[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-memory"
version = "0.1.0"
description = "Graph-based memory layer with sleep-time compute for stateful AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Krishna Vaswanth", email = "kvyaswanth@umbc.edu" },
]
keywords = ["ai", "agents", "memory", "graph", "llm", "memgpt", "letta"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20",
    "numpy>=1.26",
]

[project.optional-dependencies]
openai = ["openai>=1.20"]
local-embeddings = ["sentence-transformers>=2.6"]
postgres = ["asyncpg>=0.29", "pgvector>=0.3"]
redis = ["redis[hiredis]>=5.0"]
all = ["agentic-memory[openai,local-embeddings,postgres,redis]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_memory"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
